# gft-cloud-data-migration-framework

./: .gitignore  README.md  README_extracted.md  __init__.py  connector_base.py  extractor.py  pyproject.toml  requirements.txt  validator.py
.github/workflows/: ci.yml
data-migration-infra-main/: .gitignore  Jenkinsfile  README.md
data-migration-infra-main/backend/: README.md  image_pusher.sh  images.txt
data-migration-infra-main/backend/dataLoader/: requirements.txt
data-migration-infra-main/backend/dl-account-p/: Dockerfile
data-migration-infra-main/backend/dl-consumers/: Dockerfile
data-migration-infra-main/backend/dl-customer-p/: Dockerfile
data-migration-infra-main/backend/dl-posting-p/: Dockerfile
data-migration-infra-main/backend/global-reconciliator/: .dockerignore  Dockerfile  requirements.txt  test.py
data-migration-infra-main/backend/global-reconciliator-api/: Dockerfile  tox.ini
data-migration-infra-main/backend/reconciliator-api/: Dockerfile
data-migration-infra-main/config/: environment_config.json  framework_config.json
data-migration-infra-main/infra/base-deployment/: README.md  backend.tf  data-migration-infra-base-deployment-uat.tfplan  ecr.tf  kms.tf  locals.tf  outputs.tf  provider.tf  variables.tf
data-migration-infra-main/infra/data-etl/: .gitignore  .stepfunctions.md5  README.md  backend.tf  check-stepfunctions-md5.sh  glue-crawler.tf  glue-database.tf  glue-job.tf  iam-role.tf  lambda.tf  locals.tf  log-group.tf  outputs.tf  policies.tf  provider.tf  rds.tf  s3.tf  (+4 more)
docs/: gft_migration_pipeline.md  migration_phases.md
(+257 files in other folders)
