[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gft-cloud-data-migration-framework"
version = "1.0.0"
description = "GFT APAC migration — legacy core (T24/Finacle/Flexcube) to S3, ThoughtMachine mapping, AWS Glue/Redshift/MSK"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "WillTran", email = "willtran112358@users.noreply.github.com"},
]
keywords = ["data-migration", "etl", "data-integration", "cdc", "data-pipeline"]

dependencies = [
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pymongo>=4.5.0",
    "snowflake-connector-python>=3.0.0",
    "apache-airflow>=2.7.0",
    "kafka-python>=2.0.0",
    "duckdb>=0.9.0",
    "polars>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
]
